# wb

./: .env.example  .gitignore  README.md  pyproject.toml
wb_monitor/: __init__.py  analytics_client.py  config.py  main.py  reporting.py  storage.py  telegram.py
