[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-monitor"
version = "0.1.0"
description = "Wildberries Analytics monitor with Telegram notifications"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
wb-monitor = "wb_monitor.main:cli"
